Fixed broken layout

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -36,6 +36,10 @@ small,
   font-size: 0.8em;
 }
 
+p {
+  word-break: break-word;
+}
+
 /// Typography - Headings
 .heading {
   --heading-ff: var(--ff-secondary);
